# django_project_DDD

./: README.md  pyproject.toml  pytest.ini
src/core/publisher/application/use_cases/: create_publisher.py  list_publisher.py
src/core/publisher/domain/: entities.py  interfaces.py
src/core/publisher/infra/publisher_django_app/: apps.py  models.py  repository.py  serializers.py  views.py
src/core/publisher/infra/publisher_django_app/migrations/: 0001_initial.py  0002_rename_uuid_publisher_id.py
src/core/publisher/tests/application/use_cases/: test_create_publisher.py
src/core/publisher/tests/domain/: test_publisher_entities.py
src/core/publisher/tests/infra/publisher_django_app/: test_create_publisher_django_app.py
src/django_project/: settings.py  urls.py
